--- a/math/post_approx_with_GP_emulators.bib
+++ b/math/post_approx_with_GP_emulators.bib
@@ -867,9 +867,14 @@ eprint = {
 
 @Manual{vsem,    title = {BayesianTools: General-Purpose MCMC and SMC Samplers and Tools for BayesianStatistics},    author = {Florian Hartig and Francesco Minunno and Stefan { Paul}},    year = {2023},    note = {R package version 0.1.8},    url = {https://CRAN.R-project.org/package=BayesianTools},  }
 
-
-
-
+@article{FATES_CES,
+   title={Inferring parameters in a complex land surface model by combining data assimilation and machine learning.}
+   DOI={DOI: 10.22541/essoar.172070530.05098424/v1},
+   journal={ESS Open Archive},
+   author={Lasse Torben Keetz and Kristoffer Aalstad and Rosie A. Fisher and Christian Poppe Teran and Bibi S. Naz and Norbert Pirk and Yeliz Yilmaz and Olav Skarpaas},
+   year={2024},
+   month={July}
+  }
 
 
 %
